--- a/src/app/shared/product/list/list-container/product-list-container.component.html
+++ b/src/app/shared/product/list/list-container/product-list-container.component.html
@@ -1,1 +1,5 @@
 <p>list-container works!</p>
+<app-product-list
+                  [smartphonesList]="smartphonesList"
+                  [laptopsList]="laptopsList"
+></app-product-list>
